--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -5,3 +5,17 @@
   font-weight: 400;
   box-sizing: border-box;
 }
+
+body {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
